--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -9,7 +9,7 @@ public_folder: /images/uploads
 collections:
   #yaml middleman data example
   - name: product
-    label: Product
+    label: Termékek
     format: yml
     extension: yml
     folder: data/products/
